--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,12 @@
     position: absolute;
     float: right;
     right: 10px;
-    color: tomato;
 }
 
 .container {
     margin:8% 5% 8% 3%;
     background-color: white;
+    padding: 30px;
 }
 
 h1 {
@@ -38,3 +38,35 @@ h1 {
     padding: 10px;
     float: left;
   }
+
+  /*
+  ** css styles only on contact
+  */
+
+  /* form input boxes */
+  input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+  
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  /* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
