--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,3 +70,41 @@ input[type=submit]:hover {
     background-color: #45a049;
   }
   
+  /*
+  ** css styles only on portofolio
+  */
+
+/* Float 2 columns side by side */
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+}
+
+/* Remove extra left and right margins, due to padding in columns */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the counter cards */
+.card {
+  padding: 16px;
+  text-align: center;
+  background-color: grey;
+  width: 350px;
+  height: 350px; 
+}
+
+/* Responsive columns - one column layout (vertical) on small screens */
+@media screen and (max-width: 768px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin: 20px;
+  }
+}
