--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,40 +2,38 @@
 ** This is the CSS for the web pages
 */
 
+.container {
+  margin:8% 5% 8% 3%;
+  background-color: white;
+  padding: 30px;
+}
+
+h1 {
+  color: teal;
+}
+
 /*
 ** Start of styles for the navigation bar, including the logo
 */
-#logo {
-    background-color: teal;
-    color: white;
-    float: left;
-    position: absolute;
-    padding: 10px;
-    top: -10px;
-}
+
 
 .navbar-brand {
   height: auto;
+  background-color: teal;
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
 }
 
 .navbar-nav {
     position: absolute;
     float: right;
     right: 10px;
+
 }
 /*
 ** End of styles for the navigation bar, including the logo
 */
-
-.container {
-    margin:8% 5% 8% 3%;
-    background-color: white;
-    padding: 30px;
-}
-
-h1 {
-    color: teal;
-}
 
 #fixed-pic {
     width: 100%;
@@ -57,9 +55,11 @@ h1 {
   position: sticky;
   bottom: 0;
   width: auto;
+  border:  2px solid teal;
   height: 40px;
   line-height: 40px;
   background-color: lightgray;
+  text-align: center;
 }
 
 /*
